[gd_scene load_steps=22 format=3 uid="uid://bvyq52udpx6sw"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_cq14r"]
[ext_resource type="PackedScene" uid="uid://berqu5o75bccl" path="res://scenes/player.tscn" id="1_tw06h"]
[ext_resource type="PackedScene" uid="uid://bub7hx14b8l7d" path="res://scenes/loot_service.tscn" id="2_b57f3"]
[ext_resource type="Texture2D" uid="uid://c4hrk1jnvv732" path="res://assets/sprites/world_tileset.png" id="2_gr50m"]
[ext_resource type="Texture2D" uid="uid://c7c5qxcqohkj" path="res://tile2.png" id="4_js8oc"]
[ext_resource type="PackedScene" uid="uid://b4oahpe8wqnoj" path="res://scenes/ui.tscn" id="6_jbb7n"]
[ext_resource type="Texture2D" uid="uid://chvn2e8e3fwqx" path="res://assets/sprites/chest1.png" id="7_cukhw"]
[ext_resource type="PackedScene" uid="uid://egpgi7r4axse" path="res://scenes/enemy.tscn" id="8_65k8y"]
[ext_resource type="Texture2D" uid="uid://q0dgdl4asjsw" path="res://assets/sprites/tile1.png" id="9_2748n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oarsm"]
texture = ExtResource("2_gr50m")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u1ug5"]
texture = ExtResource("4_js8oc")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vd3yq"]
sources/0 = SubResource("TileSetAtlasSource_oarsm")
sources/1 = SubResource("TileSetAtlasSource_u1ug5")

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ldw"]
atlas = ExtResource("7_cukhw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rknd"]
atlas = ExtResource("7_cukhw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_quyap"]
atlas = ExtResource("7_cukhw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ia5w"]
atlas = ExtResource("7_cukhw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg5b6"]
atlas = ExtResource("7_cukhw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruy10"]
atlas = ExtResource("7_cukhw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ngqld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ldw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rknd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quyap")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ia5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg5b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruy10")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tbik4"]
texture = ExtResource("9_2748n")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0in7b"]
sources/0 = SubResource("TileSetAtlasSource_tbik4")

[node name="game" type="Node2D"]
script = ExtResource("1_cq14r")

[node name="loot_service" parent="." instance=ExtResource("2_b57f3")]
unique_name_in_owner = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vd3yq")
format = 2
layer_0/tile_data = PackedInt32Array(65539, 262144, 9, 65538, 262144, 9, 131074, 262144, 9, 131073, 262144, 9, 65537, 262144, 9, 65536, 262144, 9, 131071, 262144, 9, 131070, 262144, 9, 196605, 262144, 9, 786419, 262144, 9, 851955, 262144, 9, 917491, 262144, 9, 983026, 262144, 9, 1048562, 262144, 9, 1114098, 262144, 9, 1114097, 262144, 9, 1179633, 262144, 9, 1245169, 262144, 9, 1310705, 262144, 9, 1376241, 262144, 9, 1441777, 262144, 9, 1507313, 262144, 9, 1507314, 262144, 9, 1572851, 262144, 9, 1572852, 262144, 9, 1572853, 262144, 9, 1638390, 262144, 9, 1638391, 262144, 9, 1638392, 262144, 9, 1638393, 262144, 9, 1638394, 262144, 9, 1638395, 262144, 9, 1638396, 262144, 9, 1638397, 262144, 9, 1638398, 262144, 9, 1638399, 262144, 9, 1572864, 262144, 9, 1572865, 262144, 9, 1507330, 262144, 9, 1507331, 262144, 9, 1441795, 262144, 9, 1441796, 262144, 9, 1376260, 262144, 9, 1376261, 262144, 9, 1310725, 262144, 9, 1245189, 262144, 9, 1179653, 262144, 9, 1114117, 262144, 9, 1048581, 262144, 9, 983045, 262144, 9, 917509, 262144, 9, 851973, 262144, 9, 786437, 262144, 9, 720901, 262144, 9, 655365, 262144, 9, 589829, 262144, 9, 524293, 262144, 9, -262130, 262144, 9, -327667, 262144, 9, -393203, 262144, 9, -458740, 262144, 9, -524277, 262144, 9, -589814, 262144, 9, -655350, 262144, 9, -655351, 262144, 9, -720888, 262144, 9, -720889, 262144, 9, -786426, 262144, 9, -786427, 262144, 9, -851964, 262144, 9, -851965, 262144, 9, -851966, 262144, 9, -917503, 262144, 9, -917504, 262144, 9, -851969, 262144, 9, -851970, 262144, 9, -851971, 262144, 9, -917508, 262144, 9, -917509, 262144, 9, -917510, 262144, 9, -917511, 262144, 9, -917512, 262144, 9, -917513, 262144, 9, -851977, 262144, 9, -851978, 262144, 9, -786442, 262144, 9, -786443, 262144, 9, -720907, 262144, 9, -655372, 262144, 9, -589836, 262144, 9, -589837, 262144, 9, -524301, 262144, 9, -458766, 262144, 9, -393230, 262144, 9, -393231, 262144, 9, -327695, 262144, 9, -262159, 262144, 9, -196624, 262144, 9, -196625, 262144, 9, -131089, 262144, 9, -131090, 262144, 9, -65554, 262144, 9, -19, 262144, 9, 65517, 262144, 9, 131053, 262144, 9, 131052, 262144, 9, 196588, 262144, 9, 262124, 262144, 9, 327660, 262144, 9, -589807, 1, 0, -524271, 1, 0, -524270, 1, 0, -524269, 1, 0, -524268, 65537, 0, -589803, 1, 0, -655339, 1, 0, -655340, 1, 0, -720876, 65537, 0, -720877, 1, 0, -720878, 1, 0, -655343, 1, 0, -589806, 1, 0, -524267, 1, 0, -720879, 1, 0, -655342, 1, 0, -589805, 1, 0, -655341, 1, 0, -589804, 1, 0, -720875, 1, 0, -720874, 1, 0, -720873, 65537, 0, -786409, 1, 0, -786408, 1, 0, -851944, 1, 0, -851945, 65537, 0, -851946, 1, 0, -851947, 1, 0, -851948, 1, 0, -851949, 1, 0, -851950, 1, 0, -786414, 1, 0, -786415, 1, 0, -786411, 1, 0, -786412, 1, 0, -786413, 1, 0, -786410, 1, 0, -655337, 65537, 0, -589801, 65537, 0, -589802, 1, 0, -524266, 1, 0, -458730, 1, 0, -458729, 1, 0, -524265, 1, 0, -589800, 65537, 0, -655336, 131073, 0, -720872, 196609, 0, -655338, 65537, 0, -720871, 262145, 0, -786407, 262145, 0, -655335, 131073, 0, -589799, 131073, 0, -720870, 262145, 0, -720869, 262145, 0, -720868, 131073, 0, -655334, 196609, 0, -589798, 196609, 0, -524262, 262145, 0, -524261, 262145, 0, -524260, 131073, 0, -589796, 131073, 0, -589795, 262145, 0, -655331, 262145, 0, -655332, 262145, 0, -655333, 131073, 0, -589797, 196609, 0, -524263, 262145, 0, -524264, 65537, 0, -458727, 65537, 0, -458726, 65537, 0, -393189, 65537, 0, -524258, 262145, 0, -589794, 262145, 0)

[node name="enemy5" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-32, 178)

[node name="enemy4" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-233, 113)

[node name="player" parent="." instance=ExtResource("1_tw06h")]
unique_name_in_owner = true
position = Vector2(209, -21)

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(6, -44)
zoom = Vector2(3.5, 3.5)
limit_smoothed = true

[node name="inventory_chest" type="AnimatedSprite2D" parent="player"]
position = Vector2(17, -28)
sprite_frames = SubResource("SpriteFrames_ngqld")
animation = &"open"

[node name="ui" parent="." instance=ExtResource("6_jbb7n")]
unique_name_in_owner = true

[node name="enemy" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(145, -91)

[node name="enemy2" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-61, -162)

[node name="enemy3" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-218, -65)

[node name="enemy6" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-108, 97)

[node name="enemy7" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-118, 152)

[node name="enemy8" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(42, 219)

[node name="enemy9" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(-109, 267)

[node name="enemy10" parent="." instance=ExtResource("8_65k8y")]
position = Vector2(134, 223)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(455.4, -180.2)
lifetime = 0.17
speed_scale = 0.2
emission_shape = 3
emission_rect_extents = Vector2(8, 1)
spread = 0.0
gravity = Vector2(0, -980)
color = Color(0.133333, 1, 1, 1)
anim_speed_min = 0.15
anim_speed_max = 0.25

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_0in7b")
format = 2
layer_0/tile_data = PackedInt32Array(-917486, 0, 0, -917485, 0, 0, -917484, 0, 0, -917483, 0, 0, -917482, 0, 0, -917481, 0, 0, -917480, 0, 0, -983016, 65536, 0, -983017, 65536, 0, -983018, 65536, 0, -983019, 65536, 0, -983020, 65536, 0, -983021, 65536, 0, -983022, 65536, 0)

[connection signal="animation_finished" from="player/inventory_chest" to="." method="_on_inventory_chest_animation_finished"]
